webapps work completed end to end

--- a/src/WebApps/AspnetRunBasics/Pages/Index.cshtml
+++ b/src/WebApps/AspnetRunBasics/Pages/Index.cshtml
@@ -31,9 +31,9 @@
                 </a>
             </div>
         </div>
-
+        aa test
         <partial name="_TopProductPartial" model="Model.ProductList.FirstOrDefault()" />       
-
+        bb test
     </div>
 </div>
 
